@@ -64,6 +64,9 @@ namespace Sheepy.BattleTechMod.AttackImprovementMod {
       [ JsonComment( "Show weapon properties (bonus) instead of weapon type in weapon mouseover." ) ]
       public bool ShowWeaponProp = true;
 
+      [ JsonComment( "Apply damage reduction to damage numbers in weapon panel.  Default \"{0:0.#}\"." ) ]
+      public string ShowReducedWeaponDamage = "{0:0.#}";
+
       [ JsonComment( "Show weapon range in meters instead of \"Short\" or \"Very Long\" in weapon mouseover.  Default \"Min {0} : Long {2} : Max {4}\"." ) ]
       public string WeaponRangeFormat = "Min {0} : Long {2} : Max {4}";
 
